# Embedded-C-Application

./: .gitignore  CMakeLists.txt
cmake/: InternalModulesConfig.cmake.in
internal_modules/: CMakeLists.txt
internal_modules/crypto/: xcrypto_engine.h
internal_modules/display/: xlcd_display.h
internal_modules/hal/: xgpio_hal.c  xgpio_hal.h  xi2c_hal.h  xspi_hal.h  xuart_hal.h
internal_modules/memory/: xdma_manager.h  xmem_pool.h  xring_buffer.h
internal_modules/power/: xpower_mgmt.h
internal_modules/protocols/: xcan_protocol.h  xmodbus_protocol.h  xproprietary_protocol.h
internal_modules/scheduler/: xhw_timer.h  xrtos_scheduler.h  xsoft_timer.h
internal_modules/sensors/: xaccel_sensor.h  xgyro_sensor.h  xtemp_sensor.h
